Fix 'ViewPropTypes has been removed...' error

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/harshq/react-native-mentions/issues"
   },
-  "homepage": "https://github.com/harshq/react-native-mentions#readme"
+  "homepage": "https://github.com/harshq/react-native-mentions#readme",
+  "dependencies": {
+    "deprecated-react-native-prop-types": "^2.3.0"
+  }
 }
